[gd_scene load_steps=2 format=3 uid="uid://c5v8o5wcwdn0p"]

[ext_resource type="Script" path="res://scripts/ui/name_change_popup.gd" id="1_popup"]

[node name="NameChangePopup" type="PopupPanel"]
initial_position = 1
size = Vector2i(300, 160)
visible = true
script = ExtResource("1_popup")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 296.0
offset_bottom = 156.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Change Your Name"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter name..."
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "Apply"

[node name="CancelBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "Cancel"
